--- a/.github/workflows/prod-deployment.yml
+++ b/.github/workflows/prod-deployment.yml
@@ -14,6 +14,6 @@ jobs:
       - name: Delete image
         run: docker rmi -f sacms_backend_image
       - name: Generate image
-        run: docker -t sacms_backend_image .
+        run: docker build -t sacms_backend_image .
       - name: Exec container
         run: docker run --name sacms_backend -d -p "8002:3000" --restart always sacms_backend_image
